force-app/main/default/objects/SquadAssignment__c/SquadAssignment__c.object-meta.xml
<CustomObject>
    <description>Historique d'affectation d'un athlete a un effectif.</description>
    <label>Squad Assignment</label>
    <nameField>
        <label>Squad Assignment Name</label>
        <type>AutoNumber</type>
        <displayFormat>SA-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Squad Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>