force-app/main/default/objects/SquadAssignment__c/fields/Squad__c.field-meta.xml
<CustomField>
    <fullName>Squad__c</fullName>
    <label>Squad</label>
    <referenceTo>Squad__c</referenceTo>
    <relationshipLabel>Athlete Assignments</relationshipLabel>
    <relationshipName>AthleteAssignments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>