force-app/main/default/objects/SquadAssignment__c/validationRules/EndDateAfterStart.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateAfterStart</fullName>
    <active>true</active>
    <description>Empêche une date de fin antérieure à la date de début.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(EndDate__c)), EndDate__c &lt; StartDate__c)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date must be greater than or equal to Start Date.</errorMessage>
</ValidationRule>